[package]
name = "bmap-server"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws", "http2"] }
clap = { version = "4.5.4", features = ["derive"] }
dotenvy = "0.15.7"
hyper-util = { version = "0.1.3", features = ["client", "client-legacy"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
