[package]
name = "bmap-server"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws", "http2"] }
clap = { version = "4.5.4", features = ["derive"] }
dotenvy = "0.15.7"
hyper-util = { version = "0.1.3", features = ["client", "client-legacy"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
# panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = 3     # Optimize for binary size - P.S, default release is 3 anyway
strip = true      # Remove debug symbols
